kubernetes-manifests-file/validating-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: ingress-nginx-admission
webhooks:
  - name: validate.nginx.ingress.kubernetes.io
    clientConfig:
      service:
        name: ingress-nginx-controller-admission
        namespace: ingress-nginx
        path: "/networking/v1/ingresses"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURTVENDQWpHZ0F3SUJBZ0lVRjlRaUpmZmFmL3dGQ0xxSTUzZWxYTXJQRFZVd0RRWUpLb1pJaHZjTkFRRUwKQlFBd05ERXlNREFHQTFVRUF3d3BhVzVuY21WemN5MXVaMmx1ZUMxaFpHMXBjM05wYjI0dWFXNW5jbVZ6Y3kxdQpaMmx1ZUM1emRtTXdIaGNOTWpVd01qSTRNVE14TnpBeldoY05Nall3TWpJNE1UTXhOekF6V2pBME1USXdNQVlEClZRUUREQ2xwYm1keVpYTnpMVzVuYVc1NExXRmtiV2x6YzJsdmJpNXBibWR5WlhOekxXNW5hVzU0TG5OMll6Q0MKQVNJd0RRWUpLb1pJaHZjTkFRRUJCUUFEZ2dFUEFEQ0NBUW9DZ2dFQkFNNzhGVnJuUXNTVDBQMGMxZWFReStVNwpRbUkvUnI2VUlH [...]
    rules:
      - operations: ["CREATE", "UPDATE"]
        apiGroups: ["networking.k8s.io"]
        apiVersions: ["v1"]
        resources: ["ingresses"]
    admissionReviewVersions: ["v1"]
    sideEffects: None
